- added Base class test - checked with simple case